--- a/404.html
+++ b/404.html
@@ -24,5 +24,5 @@ layout: default
   <p>Desculpa!</p>
   <p>Je suis désolé!</p>
   <p>I'm sorry!</p>
-  <p>Entschuldigung!</p>
+  <p>Es tut mir leid!</p>
 </div>
